--- a/hijab-fashion-prosjekt/api/package.json
+++ b/hijab-fashion-prosjekt/api/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "@redwoodjs/core": "8.9.0",
-    "@redwoodjs/project-config": "8.9.0"
+    "@redwoodjs/project-config": "8.9.0",
+    "@types/node": "^24.9.1"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
