--- a/hijab-fashion-prosjekt/api/package.json
+++ b/hijab-fashion-prosjekt/api/package.json
@@ -1,32 +1,15 @@
 {
+  "name": "api",
+  "version": "0.0.0",
   "private": true,
-  "workspaces": {
-    "packages": [
-      "api",
-      "web"
-    ]
+  "dependencies": {
+    "@redwoodjs/api": "8.9.0",
+    "@redwoodjs/graphql-server": "8.9.0",
+    "better-sqlite3": "^9.3.0",
+    "drizzle-orm": "^0.29.3"
   },
   "devDependencies": {
-    "@redwoodjs/core": "8.9.0",
-    "@redwoodjs/project-config": "8.9.0",
-    "@types/node": "^24.9.1"
-  },
-  "eslintConfig": {
-    "extends": "@redwoodjs/eslint-config",
-    "root": true
-  },
-  "engines": {
-    "node": "=20.x"
-  },
-  "prisma": {
-    "seed": "yarn rw exec seed"
-  },
-  "packageManager": "yarn@4.6.0",
-  "resolutions": {
-    "@storybook/react-dom-shim@npm:7.6.20": "https://verdaccio.tobbe.dev/@storybook/react-dom-shim/-/react-dom-shim-8.0.8.tgz"
-  },
-  "dependencies": {
-    "better-sqlite3": "^12.4.1",
-    "drizzle-orm": "^0.44.6"
+    "@types/node": "^20.10.6",
+    "drizzle-kit": "^0.20.10"
   }
 }
