feat: Final project setup with all errors fixed and correct gitignore structure

--- a/hijab-fashion-prosjekt/api/.gitignore
+++ b/hijab-fashion-prosjekt/api/.gitignore
@@ -15,10 +15,14 @@ web/public/mockServiceWorker.js
 web/types/graphql.d.ts
 api/types/graphql.d.ts
 api/src/lib/generateGraphiQLHeader.*
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+
+# Yarn 4 / Corepack files
+.pnp.cjs
+.pnp.loader.mjs
+.yarn/cache
+.yarn/unplugged
+.yarnrc.yml
+yarn.lock
+
+# Standard ignore for alle Node-prosjekter
+node_modules/
